--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
+  "homepage": "https://raphaelnsilva.github.io/task-list",
   "name": "todo-list",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gp-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -25,6 +28,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "gh-pages": "^6.1.1",
     "vite": "^5.0.8"
   }
 }
